nacos/nacos-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: nacos
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
#    alb.ingress.kubernetes.io/subnets: subnet-0d3e50ed82a416715,subnet-0a0fa8cb44e896918
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nacos-cs
                port:
                  number: 8848
